--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,23 @@
-<div class="settings" *ngIf="!initialized">
-    Width: <input type="number" id="width" name="width" min="5" max="50"><br>
-    Height: <input type="number" id="height" name="height" min="5" max="50"><br>
-    Mines: <input type="number" id="mines" name="mines" min="5" max="50"><br><br>
-    <button (click)="setup()"> Submit </button>
+<div class="settings">
+  <form name="difficulty-settings">
+    <input type="radio" id="beginner" name="difficulty" value="beginner" checked="checked" (click)="changeDifficulty()"> Beginner
+    <input type="radio" id="intermediate" name="difficulty" value="intermediate" (click)="changeDifficulty()"> Intermediate
+    <input type="radio" id="expert" name="difficulty" value="expert" (click)="changeDifficulty()"> Expert
+  </form>
+  
 </div>
 
-<div class="header" *ngIf="initialized">
+<div class="header">
   <table>
     <tr>
       <td>timer</td>
+      <td>picture</td>
       <td> {{board.remainingMines}}</td>
     </tr>
   </table>
 </div>
 
-<div class="wrapper" *ngIf="initialized">
+<div class="wrapper">
   <table cellspacing="0">
     <tr *ngFor="let row of board.tiles;index as y;">
       <td *ngFor="let tile of row;index as x;"
