--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 body {
   font-family: "Press Start 2P", cursive;
-  font-size: 20;
+  font-size: 15;
+
+  margin: auto;
+  width: 50%;
 }
