--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,11 @@
+#image {
+  background-color: #c0c0c0;
+  width: 1.5rem;
+  height: 1.5rem;
+  text-align: center;
+  display: block;
+}
+
 td span {
   background-color: #c0c0c0;
   width: 1.5rem;
