--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
 <div class="header">
   <table>
     <tr>
-      <td>timer</td>
+      <td id="timer">{{time}}</td>
       <td><img id="image" src="../assets/dormant.png" alt="face"></td>
       <td> {{board.remainingMines}}</td>
     </tr>
